# apps.core.preloaded.boot-animation

./: CMakeLists.txt  project.config  tags
data/: mobile_poweroff.edc  mobile_poweroff1.edc  mobile_poweroff1_image.h  mobile_poweroff1_part.h  mobile_poweroff_image.h  mobile_poweroff_part.h  mobile_poweron.edc  mobile_poweron1.edc  mobile_poweron1_image.h  mobile_poweron1_part.h  mobile_poweron_image.h  mobile_poweron_part.h  poweroff.edc  poweroff_image.h  poweroff_part.h  poweron.edc  poweron_image.h  poweron_part.h  wearable_poweroff.edc  wearable_poweroff_image.h  wearable_poweroff_part.h  wearable_poweron.edc  wearable_poweron_image.h  wearable_poweron_part.h
data/edje/360x480/: 360x480_PowerOff.edc  360x480_PowerOff_image.h  360x480_PowerOff_part.h  360x480_PowerOn.edc  360x480_PowerOn_image.h  360x480_PowerOn_part.h
data/edje/480x800/: 480x800_PowerOff.edc  480x800_PowerOff_image.h  480x800_PowerOff_part.h  480x800_PowerOn.edc  480x800_PowerOn_image.h  480x800_PowerOn_part.h
data/edje/720x1280/: 720x1280_PowerOff.edc  720x1280_PowerOff_image.h  720x1280_PowerOff_part.h  720x1280_PowerOn.edc  720x1280_PowerOn_image.h  720x1280_PowerOn_part.h
include/: boot.h
packaging/: boot-animation.path  boot-animation.service  boot-animation.spec  late-tizen-system.service  shutdown-animation.service  silent-animation.service
src/: animation.c  boot-animation.c  boot.c
